--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
           At The <strong>Right Price</strong>
         </p>
     </div>
+    <div class="marketing-split-words">
+        <div class="happy">
+          <div id="happy">Happy Hour</div>
+          <div id="party">Party Time</div>
+        </div>
+        <div class="marketing">
+          <div id="marketing-breakfast">Breakfast</div>
+          <div id="marketing-lunch">Lunch</div>
+          <div id="marketing-dinner">Dinner</div>
+        </div>
+      </div>
+    <div class="main">
+
+    </div>
+    <div class="footer">
+
+    </div>
 
     
 </body>
