--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header-section">
-        <img class="logo-image" src="Images/logoBig.png" alt="Logo" />
+        <img class="logo-image" src="Images/logoBig.png" alt="Logo image" />
         <p class="intro-phrase">
           We Provide The Best Food<br />
           At The <strong>Right Price</strong>
@@ -27,6 +27,50 @@
         </div>
       </div>
     <div class="main">
+        <div class="food-show">
+            <div class="food-show-images">
+              <img id="food-show-image-one" src="Images/fastFood1.jpg" alt="first mage displaying first food" />
+              <img id="food-show-image-two" src="Images/fastFood2.jpg" alt="second image displaying first food" />
+            </div>
+            <div class="food-show-text">
+              <div class="food-show-heading" id="heading"><strong>Fast Food</strong></div>
+              <div class="food-show-message" id="message">You'll love our delicious fast food</div>
+              <div class="food-show-description">
+                <p id="description">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
+                  aspernatur dolorem debitis vitae, consequ untur corporis iste odio
+                  quae necessitatibus distinctio iusto repudiandae nisi similique eos,
+                  laborum numquam illum odit. Dignissimos!
+                </p>
+              </div>
+              <div class="viewgallery" id="gallery">
+                <strong>VIEW GALLERY</strong>
+              </div>
+            </div>
+          </div>
+          <div class="drinks-show">
+            <div class="drinks-show-text">
+              <div class="drinks-show-heading" id="heading"><strong>Drinks</strong></div>
+              <div class="drinks-show-message" id="messaging">
+                You'll love our delicious fast food
+              </div>
+              <div class="drinks-show-description">
+                <p id="drinks-description">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
+                  aspernatur dolorem debitis vitae, consequ untur corporis iste odio
+                  quae necessitatibus distinctio iusto repudiandae nisi similique eos,
+                  laborum numquam illum odit. Dignissimos!
+                </p>
+              </div>
+              <div class="viewdrinks" id="dgallery">
+                <strong>VIEW GALLERY</strong>
+              </div>
+            </div>
+            <div class="drinks-show-images">
+              <img id="drinks-show-image-one" src="Images/drink1.jpg" alt="Drinks" />
+              <img id="drinks-show-image-two" src="Images/drink2.jpg" alt="Drinks" />
+            </div>
+          </div>
 
     </div>
     <div class="footer">
