--- a/index.html
+++ b/index.html
@@ -67,8 +67,46 @@
               </div>
             </div>
             <div class="drinks-show-images">
-              <img id="drinks-show-image-one" src="Images/drink1.jpg" alt="Drinks" />
-              <img id="drinks-show-image-two" src="Images/drink2.jpg" alt="Drinks" />
+              <img id="drinks-show-image-one" src="Images/drink1.jpg" alt="Image displaying drinks" />
+              <img id="drinks-show-image-two" src="Images/drink2.jpg" alt="Image displaying drinks" />
+            </div>
+          </div>
+          <div class="food-slider-section">
+            <div class="food-slider">
+              <div class="slider">
+                <div id="slide-one"><strong>Fast Food</strong></div>
+                <div id="slide-two"><strong>Drinks</strong></div>
+                <div id="slide-three"><strong>Chicken</strong></div>
+                <div id="slide-four"><strong>Rice</strong></div>
+              </div>
+              <div class="slider-arrows">
+                <div class="slider-left-arrow"><i class="left"></i></div>
+                <div class="chickenburger">
+                  <img
+                    id="slider-image-one"
+                    src="Images/fastfood/chickenBurger.jpg"
+                    alt="Chicken Burger"
+                  />
+                  <p id="chickenburger"><strong>Chicken Burger</strong></p>
+                </div>
+                <div class="beefburger">
+                  <img
+                    id="slider-image-two"
+                    src="Images/fastfood/beefBurger.jpg"
+                    alt="Beef Burger"
+                  />
+                  <p id="beefburger"><strong>Beef Burger</strong></p>
+                </div>
+                <div class="chickenpizza">
+                  <img
+                    id="slider-image-three"
+                    src="Images/fastfood/chickenPizza.jpg"
+                    alt="Chicken Pizza"
+                  />
+                  <p id="chickenpizza"><strong>Chicken Pizza</strong></p>
+                </div>
+                <div class="slider-right-arrow"><i class="right"></i></div>
+              </div>
             </div>
           </div>
 
